--- a/template/tag.html
+++ b/template/tag.html
@@ -13,7 +13,7 @@
     {{template "_navigation.html"}}
 
     <main class="wrapper">
-      <h2>Posts</h2>
+      <h2>Post list for {{.Tag}}</h2>
       <nav itemscope itemtype="https://schema.org/SiteNavigationElement">
         <meta itemprop="name" content="Article list">
 
