Added RSS feeds

--- a/template/_footer.html
+++ b/template/_footer.html
@@ -1,3 +1,5 @@
-<footer class="wrapper">
-  Generic footer
-</footer>
+<div class="footer">
+  <footer class="wrapper">
+    Generic footer
+  </footer>
+</div>
