--- a/template/_navigation.html
+++ b/template/_navigation.html
@@ -1,9 +1,14 @@
-<header class="wrapper">
-  <h3>My site</h3>
-  <nav itemscope itemtype="http://schema.org/SiteNavigationElement" class="main-navigation">
-    <meta itemprop="name" content="Main Menu">
+<div class="navigation">
+  <header class="wrapper">
+    <h3 class="home">
+      <a href="/" itemprop="url">My site</a>
+    </h3>
 
-    <a href="/" itemprop="url">Home</a>
-    <a href="#" itemprop="url">Some other static link</a>
-  </nav>
-</header>
+    <nav itemscope itemtype="http://schema.org/SiteNavigationElement" class="main-navigation">
+      <meta itemprop="name" content="Main Menu">
+
+      <a href="#" itemprop="url">About</a>
+      <a href="/feed.rss" itemprop="url">RSS feed</a>
+    </nav>
+  </header>
+</div>
