--- a/template/_meta.html
+++ b/template/_meta.html
@@ -3,3 +3,6 @@
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
 <link rel="stylesheet" href="/style.css">
+
+<link rel="alternate" type="application/rss+xml" href="/feed.rss">
+<link rel="alternate" type="application/feed+json" href="/feed.json">
